align issues fixed

--- a/src/component/Home/customeStyle.css
+++ b/src/component/Home/customeStyle.css
@@ -1,5 +1,7 @@
 body{
-margin: 0px
+margin: 0px;
+font-family: 'Lato', sans-serif;
+line-height: 1.5;
 }
 .root{
     width: 100%;
@@ -213,7 +215,7 @@ p.first-page-title {
 .all_description_text{
 font-size: 15px;
 color: #888888;
-line-height: 1.3;
+line-height: 1.8;
 }
 .all_description_text_color{
 color:#FF3481;
